Fixed z-index and overlay issues

--- a/src/sass/components/ATATPageHead.scss
+++ b/src/sass/components/ATATPageHead.scss
@@ -1,7 +1,7 @@
 header._atat-page-header {
   height: 6rem !important;
   background-color: $white !important;
-  z-index: 0 !important;
+  z-index: 100 !important;
   
   .v-toolbar__content {
     height: 6rem !important;
